Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1203

When upgrading from Lustre 1.8 to 2.1, if the parameter root_squash is set, Lustre throws an error and denies mounting the filesystem. It's necessary to completely delete the parameter

XMLWordPrintable

    • 3
    • 4459

      When upgrading from Lustre 1.8 to 2.1, if the parameter rootsquash is set, Lustre throws an error and denies mounting the filesystem. This is the error from the MDS logs:

      Mar 7 20:03:35 mds01 kernel: LustreError: 6610:0:(obd_config.c:1140:class_process_proc_param()) home-MDT0000: unknown param rootsquash=99:99
      Mar 7 20:03:35 mds01 kernel: LustreError: 6610:0:(obd_config.c:1361:class_config_llog_handler()) Err -38 on cfg command:
      Mar 7 20:03:35 mds01 kernel: Lustre: cmd=cf00f 0:home-MDT0000 1:mdt.rootsquash=99:99
      Mar 7 20:03:35 mds01 kernel: LustreError: 15c-8: MGC172.16.4.3 at tcp: The configuration from log 'home-MDT0000' failed (-38). This may be the result of communication errors between this node and the MGS, a bad configuration, or other errors. See the syslog for more information.
      Mar 7 20:03:35 mds01 kernel: LustreError: 6124:0:(obd_mount.c:1192:server_start_targets()) failed to start server home-MDT0000: -38
      Mar 7 20:03:35 mds01 kernel: LustreError: 6124:0:(obd_mount.c:1723:server_fill_super()) Unable to start targets: -38
      Mar 7 20:03:35 mds01 kernel: Lustre: Failing over home-MDT0000

      We were able to overcome this using tunefs.lustre with the option --writeconf added. This should be managed automatically (ideally, migrating the configuration) or at least, documented.

            yujian Jian Yu
            ansanz Antonio Sanz
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: